--- a/app/templates/index.jinja2.html
+++ b/app/templates/index.jinja2.html
@@ -2,10 +2,11 @@
   <head>
     <meta charset="UTF-8" />
   </head>
-  
+
   <body>
     <h1>Hello, オレオレFW</h1>
     <h2>全角文字も表示される</h2>
     <h3>変数の中身も展開される：{{message}}</h3>
+    <h4>DBの中身も展開される：user_id: {{user_id}}, comment: {{greeting}}</h4>
   </body>
 </html>
